--- a/client/dicegame.scss
+++ b/client/dicegame.scss
@@ -27,6 +27,7 @@ body {
     color: #e5e5e5;
 
     padding: 2em;
+    margin: 0;
     padding-bottom: 4em;
     position: relative;
 }
@@ -115,7 +116,7 @@ select,
   text-shadow: 1px 1px 2px rgba(black, 0.3);
 }
 
-.button {
+a.button {
   cursor: pointer;
   padding: 0.4em 1em;
   text-decoration: none;
@@ -159,10 +160,15 @@ select,
 // Lobby
 // --------------------------------------------------
 
+#nameinput {
+    float: left;
+    width: 50%;
+}
+
 #others {
-    float: right;
+    float: left;
     width: 40%;
-    margin-left: 10%;
+    margin-right: 10%;
 
     h3:first-child {
         margin-top: 0;
@@ -180,7 +186,7 @@ select,
         opacity: 1;
         li {
             &:hover {
-                @extend .button;
+                @extend a.button;
                 list-style: none;
 
                 &:before {
@@ -251,6 +257,18 @@ select,
     float: left;
     margin-right: 1em;
     margin-bottom: 1em;
+
+    &.red {
+        $dice-color: #b0043a;
+        background: $dice-color;
+        background: -webkit-linear-gradient(darken($dice-color, 10), $dice-color);
+        background: -moz-linear-gradient(darken($dice-color, 10), $dice-color);
+        background: linear-gradient(darken($dice-color, 10), $dice-color);
+
+        color: white;
+        text-shadow: 0px -1px 2px black;
+        border: solid 4px darken($dice-color, 5);
+    }
 }
 
 #sum {
